# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[project]
name = "efootprint"
version = "22.2.1"
description = "Digital service environmental footprint model"
authors = [{name = "Vincent Villet for Publicis Sapient"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pint>=0.25,<0.26",
    "matplotlib>=3.10,<4.0",
    "pytz==2024.1",
    "pyvis==0.3.2",
    "plotly>=6,<7",
    "pandas>=2,<3",
    "requests>=2.31,<3.0",
    "ecologits>=0.11,<0.12",
    "boaviztapi>=2,<3",
    "orjson>=3.11,<4.0",
    "zstandard>=0.23,<0.24",
    "ciso8601>=2.3,<3.0",
]

[tool.poetry]
include = ["efootprint/constants/custom_units.txt",
    "efootprint/builders/services/ecobenchmark_analysis/ecobenchmark_data_for_job_defaults.csv",
    "efootprint/modeling_templates/how_to/*.json",
    "efootprint/modeling_templates/introductory/*.json"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | __pychache__
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.group.dev.dependencies]
pytest = '*'
pytest-cov = '*'
jupyter = "^1"
ipykernel = "^7"
mkdocs-material = "*"
mkdocs-macros-plugin = "^1.5"
pymdown-extensions = "*"
jinja2 = "*"
nbconvert = "*"
pretty-jupyter = "*"
"ruamel.yaml" = "0.18.6"
setuptools = "^75.1.0"
line-profiler = "4.2.0"
memory-profiler = "^0.61"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
